--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@remix-run/react": "latest",
+    "@supabase/supabase-js": "^2.57.2",
     "@sveltejs/kit": "latest",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
@@ -55,9 +56,9 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
-  "react": "18.3.1",
+    "react": "18.3.1",
     "react-day-picker": "9.8.0",
-  "react-dom": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
@@ -65,6 +66,7 @@
     "sql.js": "^1.13.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "styled-jsx": "^5.1.7",
     "svelte": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
