--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "knex": "^3.1.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
