--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "@types/react-dom": "^18",
     "@types/sql.js": "^1.4.9",
     "@types/uuid": "^10.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.5.4",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
